--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -117,6 +117,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game
 
 [EditorStartup]
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -142,12 +143,15 @@ BoolProperty.Variable=True
 BoolProperty.DefaultValueCategory=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonBP/BP_GitTest
+MRUItem0=/Game/BP_GitTest
+MRUItem1=/Game/ThirdPersonBP/BP_GitTest
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -173,7 +177,7 @@ BRUSH=../../../../../UE4/GamJam_Doctor_Newton/Content/
 FBX=../../../../../UE4/GamJam_Doctor_Newton/Content/
 FBXAnim=../../../../../UE4/GamJam_Doctor_Newton/Content/
 GenericImport=../../../../../UE4/GamJam_Doctor_Newton/Content/
-GenericExport=../../../../../UE4/GamJam_Doctor_Newton/Content/
+GenericExport=D:/Git/GameJamProj/GameJam/GameJam/Content
 GenericOpen=../../../../../UE4/GamJam_Doctor_Newton/Content/
 GenericSave=../../../../../UE4/GamJam_Doctor_Newton/Content/
 MeshImportExport=../../../../../UE4/GamJam_Doctor_Newton/Content/
